--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -87,6 +87,7 @@
           p {
             color: white;
             font-size: 14px;
+            font-family: 'Montserrat';
             margin-bottom: 0;
             margin-left: 19px;
           }
@@ -106,6 +107,7 @@
       max-width: 920px;
       .content-top {
         color: #DCBF01;
+        font-size: 48px;
         font-family: 'Montserrat';
       }
       p {
@@ -121,7 +123,7 @@
         span {
           height: 2px;
           width: 65px;
-          background-color: orange;
+          background-color: #DCBF01;
         }
         p {
           font-size: 20px;
@@ -190,10 +192,23 @@
               font-family: 'Montserrat';
             }
           }
-          button {
+          .one {
             background-color: transparent;
             border-radius: 100px;
             border: 1.5px solid white;
+            margin-right: 42px;
+            padding: 0;
+            opacity: 0.5;
+            img {
+              margin: 16px;
+              width: 16px;
+              height: 16px;
+            }
+          }
+          .true {
+            background-color: transparent;
+            border-radius: 100px;
+            border: 1.5px solid rgb(255, 255, 255);
             margin-right: 42px;
             padding: 0;
             img {
@@ -201,10 +216,6 @@
               width: 16px;
               height: 16px;
             }
-          }
-          button:nth-child(1) {
-            opacity: 0.5;
-            margin-right: 42px;
           }
         }
         .title-content {
@@ -217,17 +228,18 @@
           margin-top: 48px;
           .dekstop {
             color: white;
-            font-family: 'Montserrat';
+            font-family: 'Maven Pro';
             font-size: 17px;
             line-height: 32px;
           }
           .mobile{
+            font-family: 'Maven Pro';
             display: none;
           }
           a {
             color: #DCBF01;
             text-decoration: none;
-            font-family: 'Montserrat';
+            font-family: 'Maven Pro';
             font-size: 17px;
             span {
               margin-left: 29px;
@@ -347,6 +359,7 @@
       }
       p {
         color: #DCBF01;
+        font-family: 'Maven Pro';
         span {
 
         }
@@ -401,7 +414,7 @@
       .col-6 {
         p {
           color: white;
-          font-family: 'Montserrat';
+          font-family: 'Maven Pro';
           font-size: 15px;
           line-height: 32px;
         }
@@ -534,7 +547,7 @@
       .content {
         p {
           color: white;
-          font-family: 'Montserrat' ;
+          font-family: 'Maven Pro' ;
           font-size: 17px;
           line-height: 32px;
         }
@@ -546,6 +559,7 @@
           column-gap: 15px;
           .col{
             input {
+              font-family: 'Maven Pro';
               background-color: transparent;
               border-top: 1px solid transparent;
               border-left: 1px solid transparent;
@@ -579,6 +593,7 @@
         a {
           color: #DCBF01;
           text-decoration: none;
+          font-family: 'Poppins';
         }
       }
     }
@@ -599,7 +614,7 @@
         }
         p {
           color: white;
-          font-family: 'Maven Pro';
+          font-family: 'Montserrat';
           line-height: 17px;
           margin-bottom: 23px;
         }
