--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -360,9 +360,6 @@
       p {
         color: #DCBF01;
         font-family: 'Maven Pro';
-        span {
-
-        }
       }
     }
     .grid{
@@ -506,11 +503,11 @@
           width: 300px;
           margin-left: 30px;
           overflow: hidden;
-          img {
-            // margin: 0 auto;
-            // height: 46px;
-            // width: 270px;
-          }
+          // img {
+          //   margin: 0 auto;
+          //   height: 46px;
+          //   width: 270px;
+          // }
         }
         .box-right {
           width: 150px;
