--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -61,7 +61,7 @@ header nav a {
 }
 
 header nav a:hover {
-	color: orange;
+	color: #DCBF01;
 }
 
 .hero {
@@ -179,7 +179,7 @@ header nav a:hover {
     color: #FFF;
 	}
   #primary-menu ul li a:hover {
-    color: orange;
+    color: #DCBF01;
   }
 
 }
