--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -54,7 +54,7 @@ header nav a {
 }
 
 header nav a:hover {
-  color: orange;
+  color: #DCBF01;
 }
 
 .hero {
@@ -181,6 +181,6 @@ header nav a:hover {
   }
 
   #primary-menu ul li a:hover {
-    color: orange;
+    color: #DCBF01;
   }
 }/*# sourceMappingURL=header.css.map */
