--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -37,6 +37,9 @@ $secondary : white;
           font-family: 'Montserrat';
           margin-bottom: 40px;
         }
+        .none-desktop {
+          display: none;
+        }
         p {
           font-size: 24px;
           font-family: 'Montserrat';
@@ -103,9 +106,8 @@ $secondary : white;
       display: grid;
       grid-template-columns: 1fr 1fr;
       column-gap: 160px;
-      row-gap: 300px;
       .top {
-        margin-top: 250px;
+        margin-top: 300px;
       }
       .card {
         background: black;
@@ -121,7 +123,7 @@ $secondary : white;
         p {
           font-size: 17px;
           color: white;
-          font-family: 'Montserrat';
+          font-family: 'Maven Pro';
         }
       }
     }
@@ -164,6 +166,7 @@ $secondary : white;
           border-left: 1px solid transparent;
           border-right: 1px solid transparent;
           border-bottom: 1px solid $secondary;
+          font-family: 'Maven Pro';
         }
         a {
           text-decoration: none;
@@ -171,6 +174,8 @@ $secondary : white;
           color: $primary;
           margin-left: 59px;
           align-items: center;
+          font-family: 'Poppins';
+          font-size: 16px;
           span {
             margin-left: 13px;
             display: flex;
@@ -192,6 +197,7 @@ $secondary : white;
         h1 {
           color: white;
           font-family: 'Montserrat';
+          font-size: 24px;
           margin-bottom: 23px;
         }
         p {
@@ -199,6 +205,7 @@ $secondary : white;
           font-family: 'Montserrat';
           line-height: 17px;
           margin-bottom: 23px;
+          font-size: 14px;
         }
       }
       .foo-right {
@@ -218,6 +225,7 @@ $secondary : white;
             p{
               color: white;
               font-family: 'Montserrat';
+              font-size: 14px;
             }
           }
         }
@@ -237,7 +245,7 @@ $secondary : white;
         display: grid;
         grid-template-columns: 1fr 1fr;
         column-gap: 70px;
-        row-gap: 300px;
+        row-gap: 0;
         .top {
           margin-top: 250px;
         }
@@ -256,6 +264,194 @@ $secondary : white;
             font-size: 17px;
             color: white;
             font-family: 'Montserrat';
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #product {
+    background-position: center;
+    padding: 200px 0px;
+    .container {
+      padding: 0px 40px;
+      .product-wrapper {
+        display: block;
+        .left {
+          margin-bottom: 23px;
+        }
+      }
+    }
+  }
+  #our-product {
+    .container {
+      padding: 0px 40px;
+      .content {
+        grid-template-columns: 1fr;
+        .top {
+          margin-top: 0px;
+        }
+        .card {
+          margin-top: 128px;
+        }
+        .card:nth-child(1) {
+          margin-top: 0px;
+        }
+      }
+    }
+  }
+  #subcribe {
+    .container {
+      padding: 0px 40px;
+      .subcribe-wrapper {
+        max-width: 100%;
+      }
+    }
+  }
+  .footer {
+    .container {
+      padding: 0px 40px;
+    }
+  }
+}
+
+@media screen and (max-width: 426px) {
+  #product {
+    height: 640px;
+    .container {
+      .product-wrapper {
+        .left {
+          .left-wrapper {
+            span {
+              height: 2px;
+            }
+            p {
+              font-size: 10px;
+            }
+          }
+        }
+        .right {
+          .none-mobile {
+            display: none;
+          }
+          .none-desktop {
+            font-size: 24px;
+            display: block;
+            line-height: 40px;
+          }
+          p {
+            display: none;
+          }
+        }
+      }
+      .action {
+        p {
+          font-size: 16px;
+          margin-right: 19px;
+          span {
+            font-size: 12px;
+          }
+        }
+        .action-right, 
+        .action-left {
+          height: 24px;
+          width: 24px;
+          margin-right: 16px;
+          img {
+            width: 8px;
+            height: 8px;
+          }
+        }
+      }
+    }
+  }
+  #our-product {
+    .container {
+      .title {
+        h1 {
+          font-size: 24px;
+          line-height: 29.26px;
+        }
+      }
+      .content {
+        .card {
+          img {
+            height: 331px;
+          }
+          h1 {
+            font-size: 20px;
+            line-height: 24.38px;
+          }
+          p {
+            line-height: 17.07px;
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
+
+  #subcribe {
+    .container {
+      .subcribe-wrapper {
+        .title {
+          h1 {
+            font-size: 24px;
+            line-height: 29.26px;
+          }
+        }
+        .content {
+          p {
+            font-size: 13px;
+            font-family: 'Maven Pro';
+          }
+        }
+        form {
+          display: block;
+          input {
+            width: 100%;
+            font-size: 13px;
+          }
+          a {
+            margin-top: 34px;
+            margin-left: 0px;
+            display: flex;
+            font-size: 10px;
+            justify-content: center;
+          }
+        }
+      }
+    }
+  }
+
+  .footer {
+    .container{
+      .row {
+        display: block;
+        .foo-left {
+          h1 {
+            font-size: 20px;
+          }
+          p {
+            font-family: 'Maven Pro';
+            font-size: 13px;
+          }
+        }
+        .foo-right {
+          margin-top: 84px;
+          justify-content: flex-start;
+          .right-wrapper {
+            .sosmed {
+              justify-content: flex-start;
+            }
+            .copyright {
+              p {
+                font-size: 13px;
+                font-family: 'Maven Pro';
+              }
+            }
           }
         }
       }
